[tool.poetry]
name = "final"
version = "1.0.0"
description = ""
authors = ["Dj Isaac <contact@dejaydev.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
hvplot = "^0.9.2"
scipy = "^1.12.0"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
